src/api-gateway/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      protocol: tcp
      address: 0.0.0.0
      port_value: 9901
      
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          protocol: tcp
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: AUTO
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - name: "o-short"
                          match:
                            prefix: "/o/"
                          route:
                            prefix_rewrite: "/"
                            cluster: ordering_cluster
                        - name: "o-long"
                          match:
                            prefix: "/ordering-api/"
                          route:
                            prefix_rewrite: "/"
                            cluster: ordering_cluster
                        - name: "c-short"
                          match:
                            prefix: "/c/"
                          route:
                            prefix_rewrite: "/"
                            cluster: customers_cluster
                        - name: "c-long"
                          match:
                            prefix: "/customers-api/"
                          route:
                            prefix_rewrite: "/"
                            cluster: customers_cluster
                        - name: "l-short"
                          match:
                            prefix: "/l/"
                          route:
                            prefix_rewrite: "/"
                            cluster: locations-api-service
                        - name: "l-long"
                          match:
                            prefix: "/locations-api/"
                          route:
                            prefix_rewrite: "/"
                            cluster: locations-api-service
                http_filters:
                  - name: envoy.filters.http.router
  clusters:
    - name: ordering_cluster
      connect_timeout: 0.25s
      type: strict_dns
      dns_lookup_family: v4_only
      lb_policy: round_robin
      load_assignment:
        cluster_name: ordering_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: ordering-api-service
                      port_value: 80
    - name: customers_cluster
      connect_timeout: 0.25s
      type: strict_dns
      dns_lookup_family: v4_only
      lb_policy: round_robin
      load_assignment:
        cluster_name: customers_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: customers-api-service
                      port_value: 80
    - name: locations-api-service
      connect_timeout: 0.25s
      type: strict_dns
      dns_lookup_family: v4_only
      lb_policy: round_robin
      load_assignment:
        cluster_name: locations-api-service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: locations-api-service
                      port_value: 80
